<resources>
    <string name="app_name">Exercise Menu 18A</string>
    <string name="login">LOGIN USER</string>
    <string name="usern">Username</string>
    <string name="usernH">Masukkan Username</string>
    <string name="pass">Password</string>
    <string name="passH">Masukkan Password</string>
    <string name="loginB">SIGN-IN</string>
    <string name="menu">Menu Hitung Bangun Datar</string>
    <string name="persegi">Persegi</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="trapesium">Trapesium</string>
    <string name="nim">20180140022 - Yunus Niandy Saputro</string>
    <string name="masukkan">Masukkan</string>
    <string name="tdua">:</string>
    <string name="input">Input</string>
    <string name="hitung_keliling">Hitung Keliling</string>
    <string name="hitung_luas">Hitung Luas</string>
</resources>
